feat: added security
